// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders a rem-based container with number value 1`] = `
.emotion-0 {
  padding-right: 1rem;
  padding-left: 1rem;
  margin-right: auto;
  margin-left: auto;
  max-width: 18.75rem;
}

<div
  className="emotion-0"
/>
`;

exports[`Container renders container key 1`] = `
.emotion-0 {
  padding-right: 1rem;
  padding-left: 1rem;
  margin-right: auto;
  margin-left: auto;
  max-width: 90rem;
}

<div
  className="emotion-0"
/>
`;

exports[`Container renders correctly by default 1`] = `
.emotion-0 {
  padding-right: 1rem;
  padding-left: 1rem;
  margin-right: auto;
  margin-left: auto;
  max-width: 64rem;
}

<div
  className="emotion-0"
/>
`;

exports[`Container renders with custom padding key 1`] = `
.emotion-0 {
  padding-right: 0.5rem;
  padding-left: 0.5rem;
  margin-right: auto;
  margin-left: auto;
  max-width: 64rem;
}

<div
  className="emotion-0"
/>
`;

exports[`Container renders with custom padding number value 1`] = `
.emotion-0 {
  padding-right: 3.125rem;
  padding-left: 3.125rem;
  margin-right: auto;
  margin-left: auto;
  max-width: 64rem;
}

<div
  className="emotion-0"
/>
`;

exports[`Container renders with no padding 1`] = `
.emotion-0 {
  padding-right: 0rem;
  padding-left: 0rem;
  margin-right: auto;
  margin-left: auto;
  max-width: 64rem;
}

<div
  className="emotion-0"
/>
`;
